--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="banner.html">Banner</a>
           <a class="nav-link active" aria-current="page" href="alert.html">Alert</a>
-          <a class="nav-link active" aria-current="page" href="Bootstrap 1.html">Bootstrap1</a>
-          <a class="nav-link active" aria-current="page" href="Bootstrap 2.html">Bootstrap2</a>
-          <a class="nav-link active" aria-current="page" href="Bootstrap 3.html">Bootstrap3</a>
-          <a class="nav-link active" aria-current="page" href="Bootstrap 4.html">Bootstrap4</a>
+          <a class="nav-link active" aria-current="page" href="Bootstrap 1.html">bootstrp</a>
+          <a class="nav-link active" aria-current="page" href="Bootstrap 2.html">bootstrp2</a>
+          <a class="nav-link active" aria-current="page" href="Bootstrap 3.html">bootstrp3</a>
+          <a class="nav-link active" aria-current="page" href="Bootstrap 4.html">bootstrp4</a>
           <a class="nav-link active" aria-current="page" href="Card title.html">Card title</a>
           <a class="nav-link active" aria-current="page" href="Quotes.html">Quote</a>
           <a class="nav-link active" aria-current="page" href="resume.html">Resume</a>
@@ -36,7 +36,7 @@
           <a class="nav-link active" aria-current="page" href="process bar.html">Process Bar</a>
           <a class="nav-link active" aria-current="page" href="progress-bar.html">Progress</a>
           <a class="nav-link active" aria-current="page" href="stylebutton.html">Style button</a>
-          <a class="nav-link active" aria-current="page" href="welcome page.html">Welcome page</a>
+          <a class="nav-link active" aria-current="page" href="welcome page.html">Welcome</a>
                    
         </li>
         <li class="nav-item">
