--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="banner.html">Banner</a>
+          <a class="nav-link active" aria-current="page" href="banner.html">banner</a>
           <a class="nav-link active" aria-current="page" href="alert.html">Alert</a>
           <a class="nav-link active" aria-current="page" href="Bootstrap 1.html">bootstrp</a>
           <a class="nav-link active" aria-current="page" href="Bootstrap 2.html">bootstrp2</a>
@@ -25,7 +25,7 @@
           <a class="nav-link active" aria-current="page" href="Bootstrap 4.html">bootstrp4</a>
           <a class="nav-link active" aria-current="page" href="Card title.html">Card title</a>
           <a class="nav-link active" aria-current="page" href="Quotes.html">Quote</a>
-          <a class="nav-link active" aria-current="page" href="resume.html">Resume</a>
+          <a class="nav-link active" aria-current="page" href="resume.html">resume</a>
           <a class="nav-link active" aria-current="page" href="avatar.html">Avatar</a>
           <a class="nav-link active" aria-current="page" href="Accordin.html">Accordin</a>
           <a class="nav-link active" aria-current="page" href="internalcss.html">Internalcss</a>
