--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="banner.html">banner</a>
-          <a class="nav-link active" aria-current="page" href="alert.html">Alert</a>
-          <a class="nav-link active" aria-current="page" href="Bootstrap 1.html">bootstrp</a>
-          <a class="nav-link active" aria-current="page" href="Bootstrap 2.html">bootstrp2</a>
-          <a class="nav-link active" aria-current="page" href="Bootstrap 3.html">bootstrp3</a>
-          <a class="nav-link active" aria-current="page" href="Bootstrap 4.html">bootstrp4</a>
+          <a class="nav-link active" aria-current="page" href="Alert.html">Alert</a>
+          <a class="nav-link active" aria-current="page" href="bootstrp.html">bootstrp</a>
+          <a class="nav-link active" aria-current="page" href="bootstrp2.html">bootstrp2</a>
+          <a class="nav-link active" aria-current="page" href="ootstrp3.html">bootstrp3</a>
+          <a class="nav-link active" aria-current="page" href="bootstrp4.html">bootstrp4</a>
           <a class="nav-link active" aria-current="page" href="Card title.html">Card title</a>
           <a class="nav-link active" aria-current="page" href="Quotes.html">Quote</a>
           <a class="nav-link active" aria-current="page" href="resume.html">resume</a>
@@ -31,12 +31,12 @@
           <a class="nav-link active" aria-current="page" href="internalcss.html">Internalcss</a>
           <a class="nav-link active" aria-current="page" href="Illustration.html">illustration</a>
           <a class="nav-link active" aria-current="page" href="link url.html">Link</a>
-          <a class="nav-link active" aria-current="page" href="login page.html">Login page</a>
+          <a class="nav-link active" aria-current="page" href="login.html">Login page</a>
           <a class="nav-link active" aria-current="page" href="price tag.html">Price tag</a>
           <a class="nav-link active" aria-current="page" href="process bar.html">Process Bar</a>
           <a class="nav-link active" aria-current="page" href="progress-bar.html">Progress</a>
           <a class="nav-link active" aria-current="page" href="stylebutton.html">Style button</a>
-          <a class="nav-link active" aria-current="page" href="welcome page.html">Welcome</a>
+          <a class="nav-link active" aria-current="page" href="welcome.html">Welcome</a>
                    
         </li>
         <li class="nav-item">
